welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: class Array takes type parameters
def Col(taille:Int,T:Array) {
                     ^Array1:21: error: class Array takes type parameters
def Col(taille:Int,T:Array) {
                     ^